src/assets/styles/_layouts.scss
/*! purgecss start ignore */

.page-enter-active,
.page-leave-active {
  transition: all 0.2s ease-out;
}
.page-enter,
.page-leave-active {
  opacity: 0;
  transform-origin: 50% 50%;
}

html {
  overflow-y: auto;
  overflow-x: hidden;
}

*,
*:after,
*:before {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

* {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.layout-wrapper {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.page-wrapper {
  flex-grow: 1;
  position: relative;
}

.container-fluid {
  width: 100vw;
}

a {
  text-decoration: none;
  color: inherit;
  outline: none;
  display: block;
  border: 0;
}

a:hover {
  text-decoration: none;
}

img {
  border: 0px;
  object-fit: cover;
  content-visibility: auto;
}

:focus {
  outline: none !important;
}
::-moz-focus-outer,
::-moz-focus-inner {
  border: 0px !important;
  padding: 0;
}
a:focus,
a:active,
button:focus {
  outline: 0 !important;
  outline-color: transparent !important;
  outline-width: 0 !important;
  outline-style: none !important;
  box-shadow: 0 0 0 0 rgba(0, 123, 255, 0) !important;
}
input,
textarea,
input:active,
textarea:active {
  outline: none;
}

/*! purgecss end ignore */

